update model to recibe 3 different channels MLP

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -5399,225 +5399,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using device: cuda\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "wandb version 0.16.6 is available!  To upgrade, please run:\n",
-       " $ pip install wandb --upgrade"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Tracking run with wandb version 0.16.2"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Run data is saved locally in <code>c:\\Users\\aleja\\Documents\\TUDelft\\Repository\\Vphys\\wandb\\run-20240425_121255-3fjat7xg</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/alejandro_c/Vphysics-Project-IC/runs/3fjat7xg' target=\"_blank\">exp_EndPhysMultiple_25_04_24_12</a></strong> to <a href='https://wandb.ai/alejandro_c/Vphysics-Project-IC' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View project at <a href='https://wandb.ai/alejandro_c/Vphysics-Project-IC' target=\"_blank\">https://wandb.ai/alejandro_c/Vphysics-Project-IC</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run at <a href='https://wandb.ai/alejandro_c/Vphysics-Project-IC/runs/3fjat7xg' target=\"_blank\">https://wandb.ai/alejandro_c/Vphysics-Project-IC/runs/3fjat7xg</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initial Loss \t training loss: 201.70732275390625 \t validation loss: 200.7479386329651\n",
-      "epoch: 5 \t training loss: 143.6584288330078 \t validation loss: 142.01379919052124\n",
-      "epoch: 10 \t training loss: 113.3303861694336 \t validation loss: 110.55139398574829\n",
-      "epoch: 15 \t training loss: 63.68776776123047 \t validation loss: 56.51321840286255\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0', grad_fn=<MseLossBackward0>)\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "loss tensor(nan, device='cuda:0')\n",
-      "Loss is NaN!\n",
-      "tensor(nan, device='cuda:0')\n",
-      "32\n",
-      "Loss is NaN! Epoch: 19\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n",
-       "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
-       "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
-       "    </style>\n",
-       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>k</td><td>█▇▇▇▇▆▆▆▆▆▅▅▅▅▅▄▂▁▁</td></tr><tr><td>l</td><td>██▇▇▇▆▆▅▅▄▄▄▃▃▂▂▁▁▁</td></tr><tr><td>train_loss</td><td>▁█▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁ </td></tr><tr><td>validation_loss</td><td>▁▃▁▁▁▁▁▁▁▁▁▁▁▁▁▁█▂▃▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>train_loss</td><td>nan</td></tr><tr><td>validation_loss</td><td>0</td></tr></table><br/></div></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run <strong style=\"color:#cdcd00\">exp_EndPhysMultiple_25_04_24_12</strong> at: <a href='https://wandb.ai/alejandro_c/Vphysics-Project-IC/runs/3fjat7xg' target=\"_blank\">https://wandb.ai/alejandro_c/Vphysics-Project-IC/runs/3fjat7xg</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Find logs at: <code>.\\wandb\\run-20240425_121255-3fjat7xg\\logs</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "torch.cuda.empty_cache() \n",
     "torch.manual_seed(42)\n",
@@ -5626,7 +5410,8 @@
     "data_train = data_folder['train_x']\n",
     "dt = 0.3\n",
     "train_dataloader, test_dataloader, train_x, val_x  = loader.getLoader_folder(data_train, split=True)\n",
-    "latentEncoder = mainmodel.EndPhysMultiple(dt = dt, in_size=64, n_mask = 2, in_channels = 3, latent_dim=2, initw=True)\n",
+    "latentEncoder = mainmodel.EndPhys(dt = dt, in_size=64, n_mask = 2, in_channels = 3, latent_dim=4, initw=True)\n",
+    "#latentEncoder = mainmodel.EndPhysMultiple(dt = dt, in_size=64, n_mask = 2, in_channels = 3, latent_dim=2, initw=True)\n",
     "latentEncoder, train_losses, val_losses, accuracy_list  = train.train(latentEncoder, train_dataloader, test_dataloader, '../Results/Motion_Decoder', loss_name='latent_loss')"
    ]
   },
@@ -5959,35 +5744,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor([[0.9588],\n",
-       "        [0.3615],\n",
-       "        [0.9737],\n",
-       "        [0.4099],\n",
-       "        [0.9789],\n",
-       "        [0.8692],\n",
-       "        [0.4487],\n",
-       "        [0.1690],\n",
-       "        [0.3437],\n",
-       "        [0.9566],\n",
-       "        [0.4981],\n",
-       "        [0.6148],\n",
-       "        [0.0106],\n",
-       "        [0.7202]])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.1194, 0.5001, 0.1685, 0.3910],\n",
+      "        [0.6614, 0.2581, 0.2352, 0.7478]])\n",
+      "tensor([[[0.1194, 0.5001],\n",
+      "         [0.1685, 0.3910]],\n",
+      "\n",
+      "        [[0.6614, 0.2581],\n",
+      "         [0.2352, 0.7478]]])\n",
+      "torch.Size([2, 2, 2])\n"
+     ]
     }
    ],
    "source": [
-    "torch.rand(14,1)"
+    "x = torch.rand(2,4)\n",
+    "print(x)\n",
+    "\n",
+    "# reshape x to 3d tensor size 2x2\n",
+    "x = x.view(-1, 2, 2)\n",
+    "print(x)\n",
+    "print(x.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.0610, 0.2224, 0.3052, 0.3651],\n",
+      "        [0.2652, 0.7166, 0.0498, 0.3509]])\n",
+      "tensor([[[0.0610, 0.2224],\n",
+      "         [0.3052, 0.3651]],\n",
+      "\n",
+      "        [[0.2652, 0.7166],\n",
+      "         [0.0498, 0.3509]]])\n",
+      "torch.Size([2, 2, 2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.rand(2,4)\n",
+    "print(x)\n",
+    "\n",
+    "# reshape x to 3d tensor size 2x2\n",
+    "\n",
+    "x = x.reshape(-1, 2, 2)\n",
+    "print(x)\n",
+    "print(x.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([32, 2500])\n",
+      "torch.Size([32, 7500])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.rand(32,50,50)\n",
+    "x = x.view(x.shape[0], -1)\n",
+    "print(x.shape)\n",
+    "\n",
+    "x = torch.rand(32,3,50,50)\n",
+    "x = x.view(x.shape[0], -1)\n",
+    "print(x.shape)"
    ]
   },
   {
