--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -10,16 +10,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x110e93d70>"
+       "<torch._C.Generator at 0x152a7072b70>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5718,6 +5718,74 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "points = torch.rand(1, 6)  # Generate random points\n",
+    "\n",
+    "# Reshape the tensor to have 3 dimensions: (32, 3, 2)\n",
+    "points_3d = points.view(-1, 3, 2)\n",
+    "\n",
+    "# Calculate the Euclidean distance between each pair of points\n",
+    "distances = torch.norm(points_3d, dim=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.5674, 0.8274, 0.9682]])\n",
+      "tensor([[[0.5643, 0.0594],\n",
+      "         [0.7099, 0.4250],\n",
+      "         [0.2709, 0.9295]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(distances)\n",
+    "print(points_3d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.3935)\n",
+      "torch.Size([2, 2])\n",
+      "tensor([[0.0000, 0.3935],\n",
+      "        [0.3935, 0.0000]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x0 = points_3d[0,0,0]\n",
+    "y0 = points_3d[0,0,1]\n",
+    "x1 = points_3d[0,1,0]\n",
+    "y1 = points_3d[0,1,1]\n",
+    "\n",
+    "distance = torch.sqrt((x1-x0)**2 + (y1-y0)**2)\n",
+    "print(distance)\n",
+    "\n",
+    "aa = points_3d[0,0:2,:]\n",
+    "print(aa.shape)\n",
+    "\n",
+    "distances_torch = torch.cdist(aa, aa)\n",
+    "print(distances_torch)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -6215,7 +6283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
